--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "build:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt build",
+    "precommit": "npm run lint",
+    "test": "jest",
     "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint",
-    "test": "jest"
+    "deploy": "push-dir --dir=dist master=gh-pages --cleanup"
   },
   "dependencies": {
     "cross-env": "^5.2.0",
