--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.3.4",
-    "koa": "^2.6.2",
-    "iview": "3.1.5",
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^2.6.0"
+    "@nuxtjs/pwa": "^2.6.0",
+    "cross-env": "^5.2.0",
+    "iview": "3.1.5",
+    "koa": "^2.6.2",
+    "nuxt": "^2.3.4"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
@@ -40,6 +40,7 @@
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
     "prettier": "1.14.3",
